syntax = "proto3";

option csharp_namespace = "AdvanticaServer.Protos";

service WorkerIntegration {
	rpc GetWorkerStream (EmptyMessage) returns (stream WorkerAction);
}

message EmptyMessage
{
}

message WorkerAction
{
	WorkerMessage worker = 1;
	Action actionType = 2;
}

message WorkerMessage
{
	string LastName = 1;
	string FirstName = 2;
	string MiddleName = 3;
	int64 Birthday = 4;
	Sex Sex = 5;
	bool HasChildren = 6;
}

//Пол
enum Sex {
	UnknownSex = 0;
	Male = 1;
	Female = 2;
}

enum Action {
	UnknownAction = 0;
	Create = 1;
	Update = 2;
	Delete = 3;
}